# rust-parse-generics

./: Cargo.toml  README.md  build.rs
doc-pkg/: Cargo.toml
doc/parse_generics_poc/: index.html
doc/parse_generics_shim/: index.html
doc/parse_generics_shim/parse_constr/: index.html
doc/parse_generics_shim/parse_generics_shim/: index.html
doc/parse_generics_shim/parse_where_shim/: index.html
doc/parse_macros/: index.html
doc/parse_macros/parse_enum/: index.html
doc/parse_macros/parse_item/: index.html
doc/parse_macros/parse_macros_util/: index.html
doc/parse_macros/parse_struct/: index.html
doc/parse_macros/parse_type_item/: index.html
doc/src/parse_generics_poc/: lib.rs.html
doc/src/parse_generics_shim/: parse_constr.rs.html
doc/src/parse_macros/: parse_type_item.rs.html
enum-as-str/: Cargo.toml
enum-as-str-test/: Cargo.toml
enum-as-str-test/src/: main.rs
enum-as-str/src/: lib.rs
parse-generics-poc/: Cargo.toml
parse-generics-poc/parse-macros/examples/: reflect.rs  sandbox.rs
parse-generics-poc/parse-macros/tests/: derive_serialize.rs
parse-generics-poc/src/: lib.rs
parse-generics-poc/tests/: derive_clone_copy.rs  derive_iterator.rs  simple.rs  wrap_fn.rs
parse-generics-shim/: Cargo.toml
parse-generics-shim/local/: Notes.md
parse-generics-shim/src/: lib.rs  parse_constr.rs  parse_generics_shim.rs  parse_where_shim.rs
parse-generics-shim/tests/: parse_constr.rs  parse_generics.rs  parse_where.rs
parse-macros/: Cargo.toml  build.rs
parse-macros/examples/: derive_clone.rs  derive_partial_ord.rs  reflect.rs
parse-macros/src/: lib.rs  parse_enum.rs  parse_item.rs  parse_macros_util.rs  parse_struct.rs  parse_type_item.rs
parse-macros/tests/: derive_clone.rs  derive_partial_ord.rs  derive_serialize.rs  reflect.rs  simple.rs
scripts/: update-docs.py
src/: lib.rs  parse_constr.rs  parse_generics_shim.rs  parse_where_shim.rs
tests/: derive_clone.rs  derive_clone_copy.rs  derive_iterator.rs  derive_serialize.rs  parse_constr.rs  parse_generics.rs  parse_where.rs  simple.rs  wrap_fn.rs
