[package]
name = "enum-as-str"
version = "0.1.0"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

[features]
use-parse-generics-poc = [
    "parse-generics-poc",
    "parse-macros/use-parse-generics-poc",
]

[dependencies]
parse-generics-poc = { version = "0.1.0", optional = true, path = "../parse-generics-poc" }
parse-macros = { version = "0.1.0", path = "../parse-macros" }
