[package]
name = "parse-macros"
version = "0.1.2"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "Provides macros for parsing Rust constructs such as enums and structs."
repository = "https://github.com/DanielKeep/rust-parse-generics"
documentation = "https://danielkeep.github.io/rust-parse-generics/doc/parse_macros/index.html"
keywords = ["macro", "parse", "enum", "struct"]
license = "MIT/Apache-2.0"

build = "build.rs"

[features]
use-parse-generics-poc = [
    "parse-generics-poc",
    "parse-generics-shim/use-parse-generics-poc",
]

[dependencies]
parse-generics-shim = { version = "0.1.0", path = "../parse-generics-shim" }

[dependencies.parse-generics-poc]
version = "0.1.0"
optional = true
path = "../parse-generics-poc"

[build-dependencies]
rustc_version = "0.1.7"

[dev-dependencies]
custom_derive = "0.1.4"
serde = "0.6.11"
serde_json = "0.6.0"
